@startuml

package Controller{

class Main{
+start():void
+{static}main(String[]):void
}

class ControllerJogador{
- btnContinue:Button
- btnRank:Button
- choicePlayer:ChoiceBox
+ {static}parameters:String

+initialize(URL, ResourceBundle):void
- buttonConfirmaJogador(ActionEvent):void
- buttonRank(ActionEvent):void
}

class ControllerNome{
- player1:TextArea
- player2:TextArea
- player3:TextArea
- player4:TextArea
- lblPlayer3:Label
- lblPlayer4:Label
- btnStart:Button
- totalPlayer:int
+ {static}parameters:List<String>

+initialize(URL, ResourceBundle):void
+{static}warnigMessage(String):void
-buttonConfirmaNome(ActionEvent):void
}

class ControllerQuiz{
-question:TextArea
-confirm:Button
-option1:RadioButton
-option2:RadioButton
-option3:RadioButton
-option4:RadioButton
-name1:Label
-name2:Label
-name3:Label
-name4:Label
-score1:Label
-score2:Label
-score3:Label
-score4:Label
-pictureRound:ImageView
-group:ToggleGroup
-answers:List<String>
-jogador1:Player
-jogador2:Player
-jogador3:Player
-jogador4:Player
-connectData:ConnectData
-round:Round
-questionArray:Integer[]
-currentQuestion:int
-currentRound:int
-currentPlayer:int
-totalRound:int
-totalPlayer:int
-image1:Image
-image2:Image
-image3:Image
-image4:Image


+initialize(URL, ResourceBundle):void
-buttonResponder(ActionEvent):void
-insertJogadorData():void
-checkanswer():void
-assignScoreValue():void
-changeQuestion():void
-changeScore():void
-changeImage():void
-changePlayer():void

}

class ControllerReport{
-listPlayer:ListView
-connectData:ConnectData
-btnStart:Button

+initialize(URL, ResourceBundle):void
-btnStart():void
}

}

package Model{

class ConnectData{
-connection:Connection
-statement:Statement
-resultSet:ResultSet
-DRIVER:String
-DB:String
-URL:String
-USER:String
-PASSWD:String
-data:List<String>

+selectQuestions(int, int):Round
+selectPlayers():List
+selectTotalRound():int
+insertPlayers(String, int):void
+open():boolean
+close():boolean
}

class Player{
-nome:String
-pontos:int

+Player(String)
+getNomes():String
+getPontos():int
+setPontos(int):void

}

class Round{
-question:String
-answer1:String
-answer2:String
-answer3:String
-answer4:String

+getQuestion():String
+setQuestion(String):void
+getAnswer1():String
+setAnswer1(String):void
+getAnswer2():String
+setAnswer2(String):void
+getAnswer3():String
+setAnswer3(String):void
+getAnswer4():String
+setAnswer4(String):void
}
}

class ControllerQuiz ..> class ConnectData
class ControllerQuiz ..> class Round
class ControllerQuiz ..> class Player

class Main "1..1"->"1..1"  ControllerJogador
class ControllerJogador "1..1"->"1..1" class ControllerNome
class ControllerNome "1..1"-->"1..1" class ControllerQuiz
class ControllerReport "1..1"<-"1..1" class ControllerQuiz
class ControllerJogador -- class ControllerReport

@enduml